src/objects/Slot_Game_Type__c.object
<CustomObject>
    <description>created based on csv file slot_game_type</description>
    <fields>
        <fullName>c_description__c</fullName>
        <label>c_description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <label>c_quality_cd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_slot_dtl_game_type__c</fullName>
        <label>c_slot_dtl_game_type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_slot_game_cd__c</fullName>
        <label>c_slot_game_cd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_slot_game_type__c</fullName>
        <label>c_slot_game_type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_slot_sec_game_type__c</fullName>
        <label>c_slot_sec_game_type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_end_date__c</fullName>
        <label>d_end_date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_start_date__c</fullName>
        <label>d_start_date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <label>d_timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_countdown__c</fullName>
        <label>i_countdown</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Slot Game Type</label>
    <nameField>
        <label>Slot Game Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Slot Game Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>